--- a/小技巧.md
+++ b/小技巧.md
@@ -6,8 +6,23 @@
   Array.prototype.first = function(){
             return this[0];
         }
+```
 
+```javascript
   // 2.classList实现addclass与removeclass
   this.classList.toggle('className');
 ```
 
+```javascript
+  // 3.JavaScript if()判断和==判断怎么写
+  if( condition ) {
+    statement1;
+  } else {
+    statement2;
+  }
+
+  // 括号里的condition总是一个boolean值，true或者false
+  // undefined,null,false,0,NaN,""或''（空字符串）,除了这六个值被转为false，其他值都视为true。
+
+  // NaN和任何number做布尔运算都是false，包括NaN和NaN
+```
