--- a/小技巧.md
+++ b/小技巧.md
@@ -6,6 +6,17 @@
   Array.prototype.first = function(){
             return this[0];
         }
+
+回调型：
+Array.prototype.myfind = function(con){
+    return con()
+}
+
+var ret = users.myfind(function(){
+    return 'hello'
+})
+
+console.log(ret)
 ```
 
 ```javascript
