--- a/小技巧.md
+++ b/小技巧.md
@@ -37,3 +37,30 @@ console.log(ret)
 
   // NaN和任何number做布尔运算都是false，包括NaN和NaN
 ```
+
+```javascript
+//4.input="file"，点击取消不添加文件时，不触发change事件
+在文件选择框出来之后，点击取消不执行change事件的操作
+获取$('file').val()。判断这个是否为空，为空的话直接return;
+
+if('#file').change(function(){
+  if($('#file').val() == ''){
+    return;
+  }else{
+    console.log('change事件');
+  }
+})
+
+
+选择同一个文件之后，还能再触发change事件
+清空上一次触发change事件后input的value即可。
+$('#file').change(function(){
+  if($('#file').val() == ''){
+    return;
+  }else{
+    console.log('change事件');
+    $('#file').val('')
+  }
+})
+```
+
