--- a/小技巧.md
+++ b/小技巧.md
@@ -1,8 +1,9 @@
 # JS小技巧
 
+## 1.添加原型方法
 ```javascript
 
-  // 1.添加原型方法
+  
   Array.prototype.first = function(){
             return this[0];
         }
@@ -18,18 +19,18 @@ var ret = users.myfind(function(){
 
 console.log(ret)
 ```
-
+## 2.classList实现addclass与removeclass
 ```javascript
-  // 2.classList实现addclass与removeclass
+
   this.classList.toggle('className');
 ```
-
+## 3.JavaScript if()判断和==判断怎么写
 ```javascript
   // 3.JavaScript if()判断和==判断怎么写
   if( condition ) {
-    statement1;
+    statement1; //true
   } else {
-    statement2;
+    statement2;//false
   }
 
   // 括号里的condition总是一个boolean值，true或者false
@@ -37,7 +38,7 @@ console.log(ret)
 
   // NaN和任何number做布尔运算都是false，包括NaN和NaN
 ```
-
+## 4.input="file"，点击取消不添加文件时，不触发change事件
 ```javascript
 //4.input="file"，点击取消不添加文件时，不触发change事件
 
@@ -66,3 +67,69 @@ $('#file').change(function(){
 })
 ```
 
+
+## 数组操作方法函数
+
+### filter() //过滤筛选
+
+
+filter 为数组中的每个元素调用一次 callback 函数，并利用所有使得 callback 返回 true 或等价于 true 的值的元素创建一个新数组。callback 只会在已经赋值的索引上被调用，对于那些已经被删除或者从未被赋值的索引不会被调用。那些没有通过 callback 测试的元素会被跳过，不会被包含在新数组中。
+
+callback 被调用时传入三个参数：
+
+元素的值
+元素的索引
+被遍历的数组本身
+
+在删除和计算的时候都可以运用这个筛选条件来将符合条件的数组元素挑出来新成新数组
+不符合则取不等于
+
+```javascript
+    TodoHub:[
+                {id: '001',text: '吃饭',status: true},
+                {id: '002',text: '喝酒',status: false},
+                {id: '003',text: '开车',status: true}
+            ]
+
+      //需要返回状态为真的有多少个
+
+      Doing(){
+            return TodoHub.filter((todo)=>{
+                return todo.status == true
+            }).length
+            }
+
+    //删除id为002的元素
+    deleteTodoId(id){
+        this.TodoHub = this.TodoHub.filter((todo)=>{
+          return todo.id !== id
+        })
+    },
+
+```
+
+
+
+### reduce() //统计
+
+reduce() 方法对数组中的每个元素按序执行一个由您提供的 reducer 函数，每一次运行 reducer 会将先前元素的计算结果作为参数传入，最后将其结果汇总为单个返回值。
+
+第一次执行回调函数时，不存在“上一次的计算结果”。如果需要回调函数从数组索引为 0 的元素开始执行，则需要传递初始值。否则，数组索引为 0 的元素将被作为初始值 initialValue，迭代器将从第二个元素开始执行（索引为 1 而不是 0）。
+
+reduce配合三元运算符使用比较多
+
+```javascript
+    TodoHub:[
+                {id: '001',text: '吃饭',status: true},
+                {id: '002',text: '喝酒',status: false},
+                {id: '003',text: '开车',status: true}
+            ]
+
+      //需要返回状态为真的有多少个
+
+      Doing(){
+            return this.toTodos.reduce((pre,todo)=>{
+                return pre + (todo.status ? 1:0)
+            },0)
+        }
+```
